# xmonad-jc-extra

./: LICENSE  flake.nix  my-xmonad.cabal  xmonad-jc-extra.cabal
XMonad/Layout/: Conditional.hs  PiP.hs
